# hiagent-python-sdk

./: .env-sample  .gitignore  Makefile  README.md  README.zh_CN.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: codeql.yml
agent-harness/: HIAGENT.md  README.md  setup.py
agent-harness/cli_anything/hiagent_sdk/: README.md  __init__.py  __main__.py  hiagent_cli.py
agent-harness/cli_anything/hiagent_sdk/core/: __init__.py  export.py  project.py  services.py  session.py
agent-harness/cli_anything/hiagent_sdk/skills/: SKILL.md
agent-harness/cli_anything/hiagent_sdk/tests/: TEST.md  __init__.py  test_chat_cli.py  test_cli.py  test_core.py  test_full_e2e.py  test_observe_ai_cli.py  test_up_endpoints.py
agent-harness/cli_anything/hiagent_sdk/utils/: hiagent_backend.py  repl.py  repl_skin.py
libs/api/: README.md  observe.py  observe_types.py  pyproject.toml  up.py  up_types.py
libs/api/examples/: observe_create_api_token.py  up_download.py
libs/api/examples/knowledgebase/: query.py
libs/api/examples/observe/: alert_ai_process.py  create_api_token.py  get_trace_ai_process_history.py  list_trace_spans.py  observe_create_api_token.py  trace_ai_process.py
libs/api/examples/tool/: get_and_exec_tool.py
libs/api/examples/up/: up_delete.py  up_download.py  up_downloadkey.py  up_full.py  up_longlive.py  up_uploadraw.py
libs/api/examples/workflow/: aget_workflow.py  arun_workflow.py  arun_workflow_async.py  get_workflow.py  run_workflow.py
libs/api/hiagent_api/: base.py  chat.py  chat_types.py  eva.py  eva_types.py  knowledgebase.py  knowledgebase_types.py  observe.py  observe_types.py  tool.py  tool_types.py  up.py  up_types.py  workflow.py  workflow_types.py
libs/api/samples/: observe_create_api_token.py  up_delete.py  up_download.py  up_downloadkey.py  up_full.py  up_longlive.py  up_uploadraw.py
libs/api/samples/test_data/: test.txt
libs/api/tests/: test_observe_stream.py
libs/components/: README.md  pyproject.toml
libs/components/examples/: __init__.py  invoke_agent.py  invoke_credentials_tool.py  invoke_retriever.py  invoke_sse_tool.py  invoke_tool.py  invoke_workflow.py  langchain_agent.py  langchain_integrations.py  mcp_integrations.py  retryable_executor.py  stream_agent.py
libs/components/hiagent_components/agent/: __init__.py  base.py
libs/components/hiagent_components/base/: __init__.py  base.py  utils.py
libs/components/hiagent_components/integrations/langchain/: __init__.py  retriever.py  tool.py
libs/components/hiagent_components/integrations/mcp/: tool.py
libs/components/hiagent_components/retriever/: __init__.py  base.py
libs/components/hiagent_components/tool/: __init__.py  base.py  tool.py
libs/components/hiagent_components/utils/: schema.py
libs/components/hiagent_components/workflow/: __init__.py  base.py  utils.py
libs/components/tests/utils/: schema.py
libs/eva/: README.md  __init__.py  client.py  pyproject.toml  service.py  types.py
libs/eva/hiagent_eva/: client.py
libs/eva/samples/: delete_sample.py  evaluate_sample.py  inference_and_evaluate_sample.py  pause_sample.py  retry_sample.py  rule_params.json  sample.py
libs/hibot/: README.md  pyproject.toml
libs/hibot/hibot/: __init__.py  _config.py  _request.py  _response.py  _signer.py  _sse.py  _version.py  client.py
libs/hibot/hibot/v1/: __init__.py  _client.py  _helpers.py  agents.py  base_models.py  environments.py  mcps.py  models.py  prompts.py  resources.py  sessions.py  skills.py  stream.py  types.py  uploads.py
libs/hibot/tests/: conftest.py  test_agents.py  test_basic_e2e_offline.py  test_chat_files_approve.py  test_full_journey_offline.py  test_real_env.py  test_response.py  test_sessions.py  test_signer.py  test_sse.py  test_stream.py
libs/observe/: README.md  __init__.py  client.py  helper.py  pyproject.toml
libs/observe/hiagent_observe/: __init__.py  client.py  helper.py
libs/observe/hiagent_observe/semconv/: __init__.py
libs/observe/samples/: .gitignore  auth_trace.py  sample_auth_trace.py  sample_chainlit.py
libs/observe/semconv/: __init__.py
skills/hiagent-cli/: SKILL.md
skills/hiagent-cli/evals/: assertions.md  evals.json
skills/hiagent-cli/references/: README.md  chat.md  config.md  file.md  knowledge.md  observe-ai.md  observe.md  session.md  tool.md  troubleshooting.md  workflow.md
skills/hiagent-cli/scripts/: smoke_test.py
