[project]
name = "hiagent-sdk-monorepo"
version = "0.1.0"
description = "HiAgent SDK monorepo"
license = { text = "apache-2.0" }
readme = "README.md"

requires-python = ">=3.10"
dependencies = []

[tool.uv.sources]
hiagent-api = { workspace = true }
hiagent-components = { workspace = true }
hiagent-eva = { workspace = true }
hiagent-observe = { workspace = true }

[tool.uv.workspace]
members = ["libs/api", "libs/components", "libs/eva", "libs/observe"]

[dependency-groups]
dev = [
    "langchain>=0.3.25",
    "pytest>=8.4.0",
    "hiagent-components",
    "hiagent-api",
    "hiagent-eva",
    "hiagent-observe",
    "mcp>=1.9.4",
    "langchain-core>=0.3.0",
    "chainlit>=2.2.1",
    "langchain-ollama>=0.3.3",
]
