[project]
name = "hiagent-sdk-monorepo"
version = "0.1.0"
description = "HiAgent SDK monorepo"
license = { text = "apache-2.0" }
readme = "README.md"

requires-python = ">=3.10"
dependencies = []

[tool.uv.sources]
hiagent-api = { workspace = true }
hiagent-components = { workspace = true }
hiagent-eva = { workspace = true }
hiagent-observe = { workspace = true }

[tool.uv.workspace]
members = ["libs/api", "libs/components", "libs/eva", "libs/observe"]

[dependency-groups]
dev = [
    "langchain>=0.3.25",
    "pytest>=9.0.3",
    "hiagent-components",
    "hiagent-api",
    "hiagent-eva",
    "hiagent-observe",
    "mcp>=1.23.0",
    "langchain-core>=0.3.84",
    "chainlit>=2.9.4",
    "langchain-ollama>=0.3.3",
    "starlette>=0.49.1",
    "urllib3>=2.6.3",
    "orjson>=3.11.6",
    "protobuf>=5.29.6",
    "PyJWT>=2.12.0",
    "python-multipart>=0.0.26",
    "python-socketio>=5.14.0",
    "marshmallow>=3.26.2",
    "pygments>=2.20.0",
    "langchain-text-splitters>=0.3.9",
]
