[project]
name = "hiagent-eva"
version = "0.1.2"
description = "HiAgent Eva SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tenacity>=9.1.2",
    "python-dotenv>=1.1.0",
    "hiagent-api>=0.1.0,<0.2.0",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
exclude = [
    "samples/",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
