[project]
name = "hibot"
version = "1.0.0"
description = "Hibot Managed Agent Python SDK"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Hibot SDK Maintainers" }]
dependencies = [
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hibot"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
