[project]
name = "hiagent-observe"
version = "0.1.1"
description = "HiAgent Observe SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opentelemetry-api>=1.33.1",
    "opentelemetry-exporter-otlp-proto-http>=1.33.1",
    "opentelemetry-sdk>=1.33.1",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "hiagent-api>=0.1.0,<0.2.0",
    "requests==2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
exclude = [
    "samples/",
]

[dependency-groups]
dev = [
    "chainlit>=2.2.1",
]
